--- a/environment.yaml
+++ b/environment.yaml
@@ -24,6 +24,7 @@ dependencies:
   - xz=5.4.6=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
+      - pillow-avif-plugin  
       - accelerate==1.3.0
       - aiohttp==3.9.5
       - aiosignal==1.3.1
